--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:3.6.0-alpha12'
 
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +24,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven { url 'https://jitpack.io' }
         
     }
 }
