--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile.OrderActivity"></activity>
+        <activity android:name=".ui.CartActivity"></activity>
+        <activity android:name=".Profile.OrderActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".Profile.ProfileActivity"
-            android:label="Profile"></activity>
+            android:label="Profile" />
         <activity
             android:name=".Home.HomeActivity"
             android:label="@string/app_name"
@@ -33,7 +34,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
